# ginitd

./: .editorconfig  LICENSE  README.md  TODO.md  build.sh  meson.build
man/: init.8  meson.build  runlevel.1
src/: cli_args.c  cli_args.h  cli_macros.h  getopt_args.c  getopt_args.h  getopt_args_error.c  getopt_args_error.h  getopt_error.c  getopt_error.h  getopt_init.c  getopt_init.h  getopt_private.c  getopt_private.h  getopt_usage.c  getopt_usage.h  init.c  init_comm_error.c  init_comm_error.h  init_handle_selinux.c  init_handle_selinux.h  init_macros.h  init_main.c  init_main.h  init_maintain_runlevel.c  init_maintain_runlevel.h  init_parse_code.c  init_parse_code.h  init_private.c  init_private.h  init_read_code.c  init_read_code.h  init_reap_zombies.c  init_reap_zombies.h  init_runlevel_script.c  init_runlevel_script.h  init_send_code.c  init_send_code.h  init_userspace.c  init_userspace.h  logging.h  (+43 more)
